--- a/learn-certs-pr/azure-fundamentals.yml
+++ b/learn-certs-pr/azure-fundamentals.yml
@@ -2,17 +2,15 @@
 title: 'Microsoft Certified: Azure Fundamentals'
 metadata:
   title: 'Microsoft Certified: Azure Fundamentals'
-  description: Azure Fundamentals überprüft das grundlegende Wissen über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden.
+  description: 'Azure Fundamentals überprüft das grundlegende Wissen über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden.'
 uid: certification.azure-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Kandidaten für dieses examens sollten über grundlegende Kenntnisse der Cloud-Services und einer Bereitstellung dieser Services mit Microsoft Azure verfügen.
+  Kandidaten für dieses examens sollten über grundlegende Kenntnisse der Cloud-Services und einer Bereitstellung dieser Services mit Microsoft Azure verfügen. Diese Zertifizierung ist für Kandidaten gedacht, die gerade erst anfangen, mit Cloud-basierten Lösungen und Diensten zu arbeiten, oder die neu bei Azure sind.
 
-  Die Azure Fundamentals-Zertifizierung bietet die Möglichkeit, Kenntnisse über Cloud-Konzepte, Azure-Kern-Services, Azure-Preisgestaltung, SLA und Lebenszyklus sowie die Grundlagen zu Cloud-Sicherheit, Datenschutz, Compliance und Vertrauen nachzuweisen.
-
-  Diese Zertifizierung richtet sich an Personen, die mit Cloud-basierten Lösungen und Services arbeiten. Kandidaten sollten in der Lage sein, grundlegende Kenntnisse über Cloud-Konzepte sowie Azure-Services, Workloads, Sicherheit, Datenschutz, Preisgestaltung und Support nachzuweisen. Darüber hinaus sollten Sie mit den Konzepten von Netzwerk, Speicher, Computing, Anwendungsunterstützung und Anwendungsentwicklung vertraut sein.
+  Die Azure Fundamentals Zertifizierung ist eine Gelegenheit, Kenntnisse über Cloud-Konzepte, Azure-Dienste, Azure-Arbeitslasten, Sicherheit und Datenschutz in Azure sowie Azure-Preise und -Support nachzuweisen. Die Kandidaten sollten mit den allgemeinen Technologiekonzepten vertraut sein, einschließlich der Konzepte von Netzwerk, Speicherung, Computing, Anwendungsunterstützung und Anwendungsentwicklung.
 
   Azure-Grundlagen können verwendet werden, um sich auf andere rollenbasierte Azure- oder Spezialzertifizierungen vorzubereiten. Dies ist jedoch keine Voraussetzung für eine dieser Zertifizierungen.
 subTitle: Azure Fundamentals überprüft das grundlegende Wissen über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden.
