ilt scheduler loc updates

--- a/learn-certs-pr/courses/ai-100t01.yml
+++ b/learn-certs-pr/courses/ai-100t01.yml
@@ -3,6 +3,7 @@ title: Entwurf und Implementieren einer Azure AI Lösung
 metadata:
   title: 'Kurs AI-100T01-A: Entwurf und Implementieren einer Azure AI Lösung'
   description: 'Kurs AI-100T01-A: Entwurf und Implementieren einer Azure AI Lösung'
+  iltScheduling: true
 uid: course.ai-100t01
 courseNumber: 'AI-100T01-A'
 hoursToComplete: 72
