--- a/learn-certs-pr/courses/dp-100t01.yml
+++ b/learn-certs-pr/courses/dp-100t01.yml
@@ -3,6 +3,7 @@ title: Entwerfen und Implementieren einer Data Scientist Lösung unter Azure
 metadata:
   title: 'Kurs DP-100T01-A: Entwerfen und Implementieren einer Data Scientist Lösung unter Azure'
   description: 'Kurs DP-100T01-A: Entwerfen und Implementieren einer Data Scientist Lösung unter Azure'
+  iltScheduling: true
 uid: course.dp-100t01
 courseNumber: 'DP-100T01-A'
 hoursToComplete: 72
