--- a/learn-certs-pr/courses/mb-200t01.yml
+++ b/learn-certs-pr/courses/mb-200t01.yml
@@ -3,6 +3,7 @@ title: 'Dynamics 365: Power Platform anwendungen'
 metadata:
   title: 'Kurs MB-200T01-A: Dynamics 365: Power Platform anwendungen'
   description: 'Kurs MB-200T01-A: Dynamics 365: Power Platform anwendungen'
+  iltScheduling: true
 uid: course.mb-200t01
 courseNumber: 'MB-200T01-A'
 hoursToComplete: 48
