--- a/learn-certs-pr/courses/dp-201t01.yml
+++ b/learn-certs-pr/courses/dp-201t01.yml
@@ -3,6 +3,7 @@ title: Designing an Azure Data Solution
 metadata:
   title: 'Kurs DP-201T01-A: Designing an Azure Data Solution'
   description: 'Kurs DP-201T01-A: Designing an Azure Data Solution'
+  iltScheduling: true
 uid: course.dp-201t01
 courseNumber: 'DP-201T01-A'
 hoursToComplete: 48
