--- a/learn-certs-pr/courses/md-100t01.yml
+++ b/learn-certs-pr/courses/md-100t01.yml
@@ -3,6 +3,7 @@ title: Installing Windows 10
 metadata:
   title: 'Kurs MD-100T01-A: Installing Windows 10'
   description: 'Kurs MD-100T01-A: Installing Windows 10'
+  iltScheduling: true
 uid: course.md-100t01
 courseNumber: 'MD-100T01-A'
 hoursToComplete: 24
