--- a/learn-certs-pr/courses/ms-100t01.yml
+++ b/learn-certs-pr/courses/ms-100t01.yml
@@ -3,6 +3,7 @@ title: Office 365 Management
 metadata:
   title: 'Kurs MS-100T01-A: Office 365 Management'
   description: 'Kurs MS-100T01-A: Office 365 Management'
+  iltScheduling: true
 uid: course.ms-100t01
 courseNumber: 'MS-100T01-A'
 hoursToComplete: 48
