--- a/learn-certs-pr/courses/ms-500t01.yml
+++ b/learn-certs-pr/courses/ms-500t01.yml
@@ -3,6 +3,7 @@ title: Managing Microsoft 365 Identity and Access
 metadata:
   title: 'Kurs MS-500T01-A: Managing Microsoft 365 Identity and Access'
   description: 'Kurs MS-500T01-A: Managing Microsoft 365 Identity and Access'
+  iltScheduling: true
 uid: course.ms-500t01
 courseNumber: 'MS-500T01-A'
 hoursToComplete: 24
